<resources>
    <string name="app_name">Hobbyt</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_login">LoginActivity</string>

    <string name="facebook_app_id">166795660363684</string>
    <string name="food">Food</string>
    <string name="nightlife">Nightlife</string>
    <string name="volunteer">Voluteering</string>
    <string name="sports">Sports</string>
    <string name="travel">Travel</string>
    <string name="arts">Arts And Entertainment</string>
    <string name="search_hint">Description</string>
</resources>
