<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="app.com.hobbyt.FoodActivity"
    tools:showIn="@layout/activity_food"
    android:background="#667647">

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:columnCount="2"
        android:rowCount="3">

        <ImageButton
            android:layout_width="110dp"
            android:layout_height="110dp"
            android:id="@+id/food"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="33dp"
            android:clickable="true"
            android:background="@drawable/food"
            style="@style/AppTheme.Button"
            android:text="@string/food"
            android:onClick="searchPeople"
            android:contentDescription="Food"
            android:focusable="true"/>

        <ImageButton
            android:layout_width="110dp"
            android:layout_height="110dp"
            android:id="@+id/volunteer"
            android:layout_row="0"
            android:layout_column="1"
            android:layout_marginLeft="33dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/food"
            android:clickable="true"
            style="@style/AppTheme.Button"
            android:text="@string/volunteer"
            android:onClick="searchPeople"
            android:contentDescription="Volunteer" />

        <ImageButton
            android:layout_width="110dp"
            android:layout_height="110dp"
            android:id="@+id/nightlife"
            android:layout_row="1"
            android:layout_column="0"
            android:layout_marginLeft="33dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/food"
            android:clickable="true"
            style="@style/AppTheme.Button"
            android:text="@string/nightlife"
            android:onClick="searchPeople"
            android:contentDescription="Nightlife" />

        <ImageButton
            android:layout_width="110dp"
            android:layout_height="110dp"
            android:id="@+id/sports"
            android:layout_row="1"
            android:layout_column="1"
            android:layout_marginLeft="33dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/food"
            android:clickable="true"
            style="@style/AppTheme.Button"
            android:text="@string/sports"
            android:onClick="searchPeople"
            android:contentDescription="Sports" />

        <ImageButton
            android:layout_width="110dp"
            android:layout_height="110dp"
            android:id="@+id/arts"
            android:layout_row="2"
            android:layout_column="0"
            android:layout_marginLeft="33dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/food"
            android:clickable="true"
            style="@style/AppTheme.Button"
            android:text="@string/arts"
            android:onClick="searchPeople"
            android:contentDescription="Arts and Entertainment" />

        <ImageButton
            android:layout_width="110dp"
            android:layout_height="110dp"
            android:id="@+id/travel"
            android:layout_row="2"
            android:layout_column="1"
            android:layout_marginLeft="33dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/food"
            android:clickable="true"
            style="@style/AppTheme.Button"
            android:text="@string/travel"
            android:onClick="searchPeople"
            android:contentDescription="Travel" />

    </GridLayout>
</RelativeLayout>
